"Calculation" keyword modified when using multi-site absorbing atom. New parameter: "Abs_U_iso" for fitting of Debye-waller disoacement of the absorbing atom. A bug fixed which was introduced in the previous version for FDM calculation with punctual group "3", "3/m", "4", "4/m", "6" or "6/m". For material with Ba and Cs atoms, the process of calculation of the Fermi level has been improved. This improvement is in some cases important. "Helm_mix" and "Helm_lin" keywords introduced for the treatment of Helmholtz layer. "Full_atom" keyword is now in the manual. This keyword improves in the cases the convergence of the Fermi level evaluation versus the cluster radius.

--- a/source/makefile
+++ b/source/makefile
@@ -1,6 +1,6 @@
 # Makefile to compile FDMNES with call to MUMPS, LAPACK and BLAS libraries, for sequential calculations
 # MUMPS comes with associated other libraries.
-# Works with the gfortran Linux Compiler (for other compiler change the FC command)
+# Works with the gfortran Linux Compiler (for other compiler change the FC command) 
 
 FC = gfortran-mp-6
 OPTLVL = 3 
@@ -16,9 +16,9 @@ INCDIR = include
 
 FFLAGS = -c  -O$(OPTLVL) -I$(INCDIR)
 
-OBJ = main.o clemf0.o coabs.o convolution.o diffraction.o dirac.o fdm.o fdmx.o fprime.o fprime_data.o general.o lecture.o mat.o metric.o \
-      minim.o optic.o potential.o selec.o scf.o spgroup.o sphere.o tab_data.o tddft.o tensor.o \
-      mat_solve_mumps.o RIXS.o
+OBJ = main.o clemf0.o Cluster_approach.o coabs.o convolution.o diffraction.o dirac.o fdm.o fdmx.o fprime.o fprime_data.o general.o lecture.o mat.o metric.o \
+      minim.o optic.o potential.o selec.o scf.o spgroup.o sphere.o tab_data.o tddft.o tensor.o tools.o \
+      mat_solve_mumps.o
 
 all: $(EXEC)
 
